[project]
name = "acs"
version = "1.1.0"
description = "Aquarium Control System."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
maintainers = [{name = "ACS", email = "admin@acs.com"}]
dependencies = [
    "flask",
]

[project.urls]
Documentation = "https://flask.acs.com/tutorial/"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "acs"

[tool.flit.sdist]
include = [
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["acs", "tests"]

[tool.ruff]
src = ["src"]
